# Al-Sales-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/ai/: llm_router.py  memory_agent.py  outreach_agent.py  prompts.py  reply_classifier.py  research_agent.py  sales_graph.py
app/api/: deps.py
app/api/v1/: auth.py  calendar.py  campaigns.py  companies.py  dashboard.py  emails.py  meetings.py  replies.py  router.py
app/core/: config.py  database.py  redis.py
app/models/: __init__.py  api_key.py  base.py  campaign.py  company.py  contact.py  daily_stats.py  email.py  meeting.py  memory.py  note.py  reply.py  task.py  user.py
app/repositories/: base.py  campaign_repository.py  company_repository.py  contact_repository.py  email_repository.py  meeting_repository.py  memory_repository.py  reply_repository.py  stats_repository.py  user_repository.py
app/schemas/: auth.py  campaign.py  common.py  company.py  dashboard.py  email.py  meeting.py
app/services/: auth_service.py  calendar_service.py  campaign_service.py  dashboard_service.py  email_service.py  enrichment_service.py  lead_generation_service.py  meeting_service.py  outreach_service.py  reply_service.py  research_service.py  scraper_service.py  security.py
app/workers/: async_utils.py  celery_app.py  tasks.py
database/: schema.sql
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaigns/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/leads/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/replies/: page.tsx
frontend/src/components/: AppShell.tsx  ui.tsx
frontend/src/lib/: api.ts
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_ai_agents.py  test_models.py  test_security.py
