[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sales-agent"
version = "1.0.0"
description = "Autonomous AI Sales Agent — lead gen, outreach, booking, CRM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────────
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",           # form data / file uploads
    "httpx==0.27.0",                     # async HTTP client (internal calls)

    # ── Database ───────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",                   # async PostgreSQL driver
    "alembic==1.13.2",                   # database migrations
    "pgvector==0.3.1",                   # pgvector SQLAlchemy type

    # ── Cache / Queue ──────────────────────────────────────────────────────────
    "redis[hiredis]==5.0.7",
    "celery[redis]==5.4.0",
    "celery-batches==0.9",
    "flower==2.0.1",                     # Celery monitoring UI

    # ── AI / LLM ───────────────────────────────────────────────────────────────
    "openai==1.37.0",
    "anthropic==0.31.0",
    "google-generativeai==0.7.2",
    "langchain==0.2.9",
    "langchain-openai==0.1.19",
    "langchain-anthropic==0.1.20",
    "langchain-google-genai==1.0.7",
    "langchain-community==0.2.9",
    "langgraph==0.1.19",
    "tiktoken==0.7.0",                   # token counting

    # ── Data validation ────────────────────────────────────────────────────────
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "pydantic[email]==2.8.2",
    "email-validator==2.2.0",

    # ── Authentication ─────────────────────────────────────────────────────────
    "python-jose[cryptography]==3.3.0",  # JWT
    "passlib[bcrypt]==1.7.4",            # password hashing
    "bcrypt==4.1.3",

    # ── Email ──────────────────────────────────────────────────────────────────
    "sendgrid==6.11.0",
    "boto3==1.34.144",                   # AWS SES
    "aiosmtplib==3.0.1",                 # async SMTP
    "jinja2==3.1.4",                     # email template rendering
    "premailer==3.10.0",                 # CSS inlining for HTML emails
    "html2text==2024.2.26",              # HTML → plain text

    # ── Calendar ───────────────────────────────────────────────────────────────
    "google-auth==2.32.0",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client==2.139.0",
    "icalendar==5.0.13",                 # ICS generation

    # ── Web scraping / enrichment ──────────────────────────────────────────────
    "playwright==1.45.0",                # headless browser scraping
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "aiohttp==3.9.5",
    "fake-useragent==1.5.1",
    "tenacity==8.5.0",                   # retry logic

    # ── Data processing ────────────────────────────────────────────────────────
    "pandas==2.2.2",
    "numpy==1.26.4",
    "python-dateutil==2.9.0",
    "pytz==2024.1",

    # ── Observability ─────────────────────────────────────────────────────────
    "structlog==24.4.0",                 # structured logging
    "sentry-sdk[fastapi]==2.10.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-instrumentation-sqlalchemy==0.46b0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-slugify==8.0.4",
    "phonenumbers==8.13.42",             # phone number parsing/validation
    "tldextract==5.1.2",                 # domain extraction
    "arrow==1.3.0",                      # friendly datetime handling
    "orjson==3.10.6",                    # fast JSON
    "cryptography==42.0.8",              # key encryption
    "pillow==10.4.0",                    # image processing (tracking pixel)
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.1",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",              # parallel test execution
    "httpx==0.27.0",                    # async test client for FastAPI
    "factory-boy==3.3.1",               # test fixtures
    "faker==26.0.0",                    # fake data generation
    "respx==0.21.1",                    # mock httpx calls

    # Code quality
    "ruff==0.5.2",                      # linting + formatting
    "mypy==1.11.0",                     # static type checking
    "pre-commit==3.7.1",

    # Type stubs
    "types-redis==4.6.0.20240425",
    "types-passlib==1.7.7.20240327",
    "types-python-jose==3.3.4.20240106",
    "boto3-stubs[ses]==1.34.144",

    # Dev utilities
    "ipython==8.26.0",
    "rich==13.7.1",
    "watchfiles==0.22.0",
]

[project.scripts]
sales-agent = "app.main:run"

# ── Ruff (linting + formatting) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "B904",   # raise from within except
    "ARG001", # unused function argument (common in FastAPI deps)
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "sendgrid.*",
    "playwright.*",
    "bs4.*",
    "premailer.*",
    "langchain.*",
    "langgraph.*",
    "anthropic.*",
    "google.*",
    "pgvector.*",
    "opentelemetry.*",
]
ignore_errors = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests requiring DB/Redis",
    "e2e: full end-to-end tests",
    "slow: tests taking > 5s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:langchain",
    "ignore::DeprecationWarning:pydantic",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ── Hatch ─────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.dev.scripts]
dev     = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
worker  = "celery -A app.workers.celery_app worker --loglevel=info --concurrency=4"
beat    = "celery -A app.workers.celery_app beat --loglevel=info"
flower  = "celery -A app.workers.celery_app flower --port=5555"
test    = "pytest {args}"
lint    = "ruff check app tests"
fmt     = "ruff format app tests"
typecheck = "mypy app"
migrate = "alembic upgrade head"
makemig = "alembic revision --autogenerate -m '{args}'"
